--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -25,6 +25,8 @@ dataSources:
       abis:
         - name: NFTXVaultFactoryUpgradeable
           file: ./src/abis/NFTXVaultFactoryUpgradeable.json
+        - name: NFTXFeeDistributor
+          file: ./src/abis/NFTXFeeDistributor.json
         - name: NFTXVaultUpgradeable
           file: ./src/abis/NFTXVaultUpgradeable.json
         - name: ERC20Metadata
@@ -32,6 +34,9 @@ dataSources:
         - name: ERC677Metadata
           file: ./src/abis/ERC677Metadata.json
       eventHandlers:
+        # TODO: change this to NewFeeDistributor
+        - event: NewFeeReceiver(address,address)
+          handler: handleNewFeeDistributor
         - event: NewVault(indexed uint256,address,address)
           handler: handleNewVault
   # prettier-ignore
