--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@graphprotocol/graph-cli": "0.20.0",
     "@graphprotocol/graph-ts": "0.20.0",
-    "mustache": "^4.2.0"
+    "mustache": "4.2.0"
   },
   "devDependencies": {
-    "prettier": "^2.3.0"
+    "prettier": "2.3.0"
   }
 }
