--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -1,7 +1,90 @@
 specVersion: 0.0.2
+description: Mint and trade NFT index tokens
 schema:
   file: ./schema.graphql
 dataSources:
+  # prettier-ignore
+  {{#staking}}
+  - kind: ethereum/contract
+    name: NFTXLPStaking
+    # prettier-ignore
+    network: {{network}}
+    source:
+      address: '{{address}}'
+      abi: NFTXLPStaking
+      # prettier-ignore
+      startBlock: {{startBlock}}
+    mapping:
+      file: ./src/mappings/staking.ts
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - Pool
+      abis:
+        - name: NFTXLPStaking
+          file: ./src/abis/NFTXLPStaking.json
+        - name: StakingTokenProvider
+          file: ./src/abis/StakingTokenProvider.json
+        - name: NFTXVaultFactoryUpgradeable
+          file: ./src/abis/NFTXVaultFactoryUpgradeable.json
+        - name: NFTXFeeDistributor
+          file: ./src/abis/NFTXFeeDistributor.json
+        - name: NFTXVaultUpgradeable
+          file: ./src/abis/NFTXVaultUpgradeable.json
+        - name: ERC20Metadata
+          file: ./src/abis/ERC20Metadata.json
+        - name: ERC677Metadata
+          file: ./src/abis/ERC677Metadata.json
+      eventHandlers:
+        - event: PoolCreated(uint256,address)
+          handler: handlePoolCreated
+        - event: PoolUpdated(uint256,address)
+          handler: handlePoolUpdated
+        - event: FeesReceived(uint256,uint256)
+          handler: handleFeesReceived
+  # prettier-ignore
+  {{/staking}}
+  # prettier-ignore
+  {{#feeDistributor}}
+  - kind: ethereum/contract
+    name: NFTXFeeDistributor
+    # prettier-ignore
+    network: {{network}}
+    source:
+      address: '{{address}}'
+      abi: NFTXFeeDistributor
+      # prettier-ignore
+      startBlock: {{startBlock}}
+    mapping:
+      file: ./src/mappings/feeDistributor.ts
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - FeeReceiver
+      abis:
+        - name: NFTXVaultFactoryUpgradeable
+          file: ./src/abis/NFTXVaultFactoryUpgradeable.json
+        - name: NFTXFeeDistributor
+          file: ./src/abis/NFTXFeeDistributor.json
+        - name: NFTXVaultUpgradeable
+          file: ./src/abis/NFTXVaultUpgradeable.json
+        - name: ERC20Metadata
+          file: ./src/abis/ERC20Metadata.json
+        - name: ERC677Metadata
+          file: ./src/abis/ERC677Metadata.json
+      eventHandlers:
+        - event: AddFeeReceiver(uint256,address,uint256)
+          handler: handleAddFeeReceiver
+        - event: FeeReceiverAllocChange(uint256,address,uint256)
+          handler: handleFeeReceiverAllocChange
+        - event: RemoveFeeReceiver(uint256,address)
+          handler: handleRemoveFeeReceiver
+  # prettier-ignore
+  {{/feeDistributor}}
   # prettier-ignore
   {{#vaultFactory}}
   - kind: ethereum/contract
@@ -9,7 +92,6 @@ dataSources:
     # prettier-ignore
     network: {{network}}
     source:
-      # prettier-ignore
       address: '{{address}}'
       abi: NFTXVaultFactoryUpgradeable
       # prettier-ignore
@@ -41,3 +123,36 @@ dataSources:
           handler: handleNewVault
   # prettier-ignore
   {{/vaultFactory}}
+  # prettier-ignore
+  {{#vaults}}
+  - kind: ethereum/contract
+    name: NFTXVaultUpgradeable
+    # prettier-ignore
+    network: {{network}}
+    source:
+      abi: NFTXVaultUpgradeable
+      # prettier-ignore
+      startBlock: {{startBlock}}
+    mapping:
+      file: ./src/mappings/vault.ts
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - FeeReceipt
+      abis:
+        - name: NFTXVaultFactoryUpgradeable
+          file: ./src/abis/NFTXVaultFactoryUpgradeable.json
+        - name: NFTXFeeDistributor
+          file: ./src/abis/NFTXFeeDistributor.json
+        - name: NFTXVaultUpgradeable
+          file: ./src/abis/NFTXVaultUpgradeable.json
+        - name: ERC20Metadata
+          file: ./src/abis/ERC20Metadata.json
+        - name: ERC677Metadata
+          file: ./src/abis/ERC677Metadata.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  # prettier-ignore
+  {{/vaults}}
