--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -1,7 +1,7 @@
 specVersion: 0.0.2
 description: Mint and trade NFT index tokens
 schema:
-  file: ./schema.graphql
+  file: ./src/schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: NFTXVaultFactoryUpgradeable
