--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -34,6 +34,8 @@ dataSources:
       eventHandlers:
         - event: NewFeeDistributor(address,address)
           handler: handleNewFeeDistributor
+        - event: NewEligibilityManager(address,address)
+          handler: handleNewEligibilityManager
         - event: NewVault(indexed uint256,address,address)
           handler: handleNewVault
 templates:
@@ -159,21 +161,20 @@ templates:
           handler: handleEnableRandomRedeemUpdated
         - event: EnableTargetRedeemUpdated(bool)
           handler: handleEnableTargetRedeemUpdated
-        - event: EnableSwapUpdated(bool)
-          handler: handleEnableSwapUpdated
         - event: MintFeeUpdated(uint256)
           handler: handleMintFeeUpdated
         - event: RandomRedeemFeeUpdated(uint256)
           handler: handleRandomRedeemFeeUpdated
         - event: TargetRedeemFeeUpdated(uint256)
           handler: handleTargetRedeemFeeUpdated
+        - event: EligibilityDeployed(uint256,address)
+          handler: handleEligibilityDeployed
       blockHandlers:
         - handler: handleBlock
           {{#callFilterEnabled}}
           filter:
             kind: call
           {{/callFilterEnabled}}
-
   - kind: ethereum/contract
     name: RewardDistributionTokenUpgradeable
     # prettier-ignore
@@ -209,3 +210,45 @@ templates:
           handler: handleRewardWithdrawn
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
+  - kind: ethereum/contract
+    name: NFTXEligibilityManager
+    # prettier-ignore
+    network: {{network}}
+    source:
+      abi: NFTXEligibilityManager
+    mapping:
+      file: ./src/mappings/eligibility.ts
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - EligibilityModule
+      abis:
+        - name: NFTXEligibilityManager
+          file: ./src/abis/NFTXEligibilityManager.json
+      eventHandlers:
+        - event: ModuleAdded(address,address,string,bool)
+          handler: handleModuleAdded
+        - event: ModuleUpdated(address,string,bool)
+          handler: handleModuleUpdated
+  - kind: ethereum/contract
+    name: EligibilityModule
+    # prettier-ignore
+    network: {{network}}
+    source:
+      abi: EligibilityModule
+    mapping:
+      file: ./src/mappings/eligibility.ts
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - EligibilityModule
+      abis:
+        - name: EligibilityModule
+          file: ./src/abis/ElibilityModule.json
+      eventHandlers:
+        - event: UniqueEligibilitiesSet(uint256[],bool)
+          handler: handleUniqueEligibilitiesSet
+        - event: RangeSet(uint256,uint256)
+          handler: handleRangeSet
