update to studio

--- a/package.json
+++ b/package.json
@@ -2,21 +2,25 @@
   "name": "nftx-v2-subgraph",
   "license": "UNLICENSED",
   "scripts": {
-    "auth": "graph auth https://api.thegraph.com/deploy/ $GRAPH_ACCESS_TOKEN",
+    "init": "graph init --studio nftx-v2",
+    "auth": "graph auth  --studio https://api.thegraph.com/deploy/ $GRAPH_ACCESS_TOKEN",
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
     "prepare-rinkeby": "mustache config/rinkeby.json subgraph.template.yaml > subgraph.yaml",
     "deploy-rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ dan13ram/nftx-v2-rinkeby",
     "prepare-mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
-    "deploy-mainnet": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ dan13ram/nftx-v2-mainnet",
+    "deploy-mainnet": "graph deploy --studio nftx-v2",
     "format": "prettier --ignore-path .gitignore --write \"{*,**/*}.{ts,json,md}\""
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.20.0",
     "@graphprotocol/graph-ts": "0.20.0",
     "mustache": "4.2.0"
   },
   "devDependencies": {
     "prettier": "2.3.0"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:NFTX-project/nftx-v2-subgraph.git",
+  "author": "Nick <nick@nftx.org>"
 }
