--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -42,6 +42,30 @@ dataSources:
           handler: handleNewEligibilityManager
         - event: NewVault(indexed uint256,address,address)
           handler: handleNewVault
+  - kind: ethereum/contract
+    name: NFTXStakingZap
+    # prettier-ignore
+    network: {{network}}
+    source:
+      address: '{{stakingZap}}'
+      abi: NFTXStakingZap
+      # prettier-ignore
+      startBlock: {{startBlockZaps}}
+    mapping:
+      file: ./src/mappings/zap.ts
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - StakedLpUser
+        - Zap
+      abis:
+        - name: NFTXStakingZap
+          file: ./src/abis/NFTXStakingZap.json
+      eventHandlers:
+        - event: UserStaked(uint256,uint256,uint256,uint256)
+          handler: handleUserStaked
 templates:
   - kind: ethereum/contract
     name: NFTXLPStaking
