--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -63,6 +63,10 @@ dataSources:
           file: ./src/abis/NFTXStakingZap.json
         - name: NFTXVaultFactoryUpgradeable
           file: ./src/abis/NFTXVaultFactoryUpgradeable.json
+        - name: NFTXVaultUpgradeable
+          file: ./src/abis/NFTXVaultUpgradeable.json
+        - name: ERC20Metadata
+          file: ./src/abis/ERC20Metadata.json
       eventHandlers:
         - event: UserStaked(uint256,uint256,uint256,uint256,address)
           handler: handleUserStaked
