--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -67,6 +67,8 @@ dataSources:
           file: ./src/abis/NFTXVaultUpgradeable.json
         - name: ERC20Metadata
           file: ./src/abis/ERC20Metadata.json
+        - name: ERC677Metadata
+          file: ./src/abis/ERC677Metadata.json
       eventHandlers:
         - event: UserStaked(uint256,uint256,uint256,uint256,address)
           handler: handleUserStaked
