--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -42,6 +42,12 @@ dataSources:
           handler: handleNewEligibilityManager
         - event: NewVault(indexed uint256,address,address)
           handler: handleNewVault
+        - event: UpdateFactoryFees(uint256,uint256,uint256)
+          handler: handleFactoryFees
+        - event: UpdateVaultFees(uint256,uint256,uint256,uint256)
+          handler: handleVaultFees
+        - event:  DisableVaultFees(uint256)
+          handler: handleDisableVaultFees
   - kind: ethereum/contract
     name: NFTXStakingZap
     # prettier-ignore
