--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -49,6 +49,49 @@ dataSources:
         - event:  DisableVaultFees(uint256)
           handler: handleDisableVaultFees
   - kind: ethereum/contract
+    name: NFTXSimpleFeeDistributor
+    # prettier-ignore
+    network: {{network}}
+    source:
+      address: '{{simpleFeeDistributor}}'
+      abi: NFTXSimpleFeeDistributor
+      # prettier-ignore
+      startBlock: {{startBlockSimpleFees}}
+    mapping:
+      file: ./src/mappings/simpleFeeDistributor.ts
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - FeeReceiver
+      abis:
+        - name: NFTXVaultFactoryUpgradeable
+          file: ./src/abis/NFTXVaultFactoryUpgradeable.json
+        - name: NFTXSimpleFeeDistributor
+          file: ./src/abis/NFTXSimpleFeeDistributor.json
+        - name: NFTXVaultUpgradeable
+          file: ./src/abis/NFTXVaultUpgradeable.json
+        - name: ERC20Metadata
+          file: ./src/abis/ERC20Metadata.json
+        - name: ERC677Metadata
+          file: ./src/abis/ERC677Metadata.json
+      eventHandlers:
+        - event: AddFeeReceiver(address,uint256)
+          handler: handleAddFeeReceiver
+        - event: UpdateFeeReceiverAlloc(address,uint256)
+          handler: handleUpdateFeeReceiverAlloc
+        - event: UpdateFeeReceiverAddress(address,address)
+          handler: handleUpdateFeeReceiverAddress
+        - event: RemoveFeeReceiver(address)
+          handler: handleRemoveFeeReceiver
+        - event: UpdateTreasuryAddress(address)
+          handler: handleUpdateTreasuryAddress
+        - event: UpdateLPStakingAddress(address)
+          handler: handleUpdateLPStakingAddress
+        - event: UpdateNFTXVaultFactory(address)
+          handler: handleUpdateNFTXVaultFactory
+  - kind: ethereum/contract
     name: NFTXStakingZap
     # prettier-ignore
     network: {{network}}
