--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -43,7 +43,7 @@ dataSources:
         - event: NewVault(indexed uint256,address,address)
           handler: handleNewVault
         - event: UpdateFactoryFees(uint256,uint256,uint256,uint256,uint256)
-          handler: handleFactoryFees
+          handler: handleUpdateFactoryFees
         - event: UpdateVaultFees(uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleVaultFees
         - event:  DisableVaultFees(uint256)
