--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -149,6 +149,14 @@ dataSources:
           file: ./src/abis/NFTXInventoryStaking.json
         - name: NFTXVaultFactoryUpgradeable
           file: ./src/abis/NFTXVaultFactoryUpgradeable.json
+        - name: NFTXFeeDistributor
+          file: ./src/abis/NFTXFeeDistributor.json
+        - name: NFTXVaultUpgradeable
+          file: ./src/abis/NFTXVaultUpgradeable.json
+        - name: ERC20Metadata
+          file: ./src/abis/ERC20Metadata.json
+        - name: ERC677Metadata
+          file: ./src/abis/ERC677Metadata.json
       eventHandlers:
         - event: XTokenCreated(uint256,address,address)
           handler: handleXTokenCreated
