--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -1,5 +1,5 @@
 specVersion: 0.0.2
-description: Mint and trade NFT index tokens
+description: Buy, sell, and swap NFTs instantly
 schema:
   file: ./src/schema.graphql
 dataSources:
@@ -15,7 +15,7 @@ dataSources:
     mapping:
       file: ./src/mappings/factory.ts
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Global
@@ -60,7 +60,7 @@ dataSources:
     mapping:
       file: ./src/mappings/simpleFeeDistributor.ts
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Vault
@@ -107,7 +107,7 @@ dataSources:
     mapping:
       file: ./src/mappings/zap.ts
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Zap
@@ -139,7 +139,7 @@ dataSources:
     mapping:
       file: ./src/mappings/staking.ts
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Vault
@@ -170,7 +170,7 @@ templates:
     mapping:
       file: ./src/mappings/staking.ts
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Vault
@@ -204,7 +204,7 @@ templates:
     mapping:
       file: ./src/mappings/feeDistributor.ts
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Vault
@@ -248,7 +248,7 @@ templates:
     mapping:
       file: ./src/mappings/vault.ts
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - FeeReceipt
@@ -308,7 +308,7 @@ templates:
     mapping:
       file: ./src/mappings/pool.ts
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - StakedLpUser
@@ -343,7 +343,7 @@ templates:
     mapping:
       file: ./src/mappings/eligibility.ts
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - EligibilityModule
