--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "format": "prettier --ignore-path .gitignore --write \"{*,**/*}.{ts,json,md}\""
   },
   "dependencies": {
-    "@graphprotocol/graph-ts": "0.20.1",
-    "@graphprotocol/graph-cli": "0.20.1",
+    "@graphprotocol/graph-cli": "0.24.1",
+    "@graphprotocol/graph-ts": "0.24.1",
+    "matchstick-as": "^0.2.2",
     "mustache": "4.2.0"
   },
   "devDependencies": {
