--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:NFTX-project/nftx-v2-subgraph.git",
-  "author": "Nick <nick@nftx.org>"
+  "author": "Caps <caps@nftx.org>"
 }
