--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "format": "prettier --ignore-path .gitignore --write \"{*,**/*}.{ts,json,md}\""
   },
   "dependencies": {
-    "@graphprotocol/graph-ts": "0.24.1",
     "@graphprotocol/graph-cli": "0.25.2",
+    "@graphprotocol/graph-ts": "^0.25.0",
     "mustache": "4.2.0"
   },
   "devDependencies": {
