--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -156,6 +156,36 @@ dataSources:
         - event: UserStaked(uint256,uint256,uint256,uint256,address)
           handler: handleUserStaked
   - kind: ethereum/contract
+    name: NFTXStakingZapV3
+    # prettier-ignore
+    network: {{network}}
+    source:
+      address: '{{stakingZapV3}}'
+      abi: NFTXStakingZap
+      # prettier-ignore
+      startBlock: {{startBlockZapsV3}}
+    mapping:
+      file: ./src/mappings/zap.ts
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - Zap
+      abis:
+        - name: NFTXStakingZap
+          file: ./src/abis/NFTXStakingZap.json
+        - name: NFTXVaultFactoryUpgradeable
+          file: ./src/abis/NFTXVaultFactoryUpgradeable.json
+        - name: NFTXVaultUpgradeable
+          file: ./src/abis/NFTXVaultUpgradeable.json
+        - name: ERC20Metadata
+          file: ./src/abis/ERC20Metadata.json
+        - name: ERC677Metadata
+          file: ./src/abis/ERC677Metadata.json
+      eventHandlers:
+        - event: UserStaked(uint256,uint256,uint256,uint256,address)
+          handler: handleUserStaked
+  - kind: ethereum/contract
     name: NFTXMarketplaceZap
     # prettier-ignore
     network: {{network}}
