removal of blockHandler

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deploy-rinkeby-shared": "graph deploy --product hosted-service nftx-project/nftx-v2-rinkeby",
     "deploy-goerli-shared": "graph deploy --product hosted-service nftx-project/nftx-v2-goerli",
     "deploy-mainnet-shared": "graph deploy --product hosted-service nftx-project/nftx-v2",
+    "deploy-mainnet-gd": "graph deploy --product hosted-service gundamdweeb/nftx-v2",
     "deploy-arbitrum-shared": "graph deploy --product hosted-service nftx-project/nftx-v2-arbitrum",
     "deploy-arbitrum-nftx": "graph deploy --ipfs http://116.202.19.181:5001 --node http://116.202.19.181:8020 nftx-hosted/nftx-v2-arbitrum ",
     "format": "prettier --ignore-path .gitignore --write \"{*,**/*}.{ts,json,md}\""
