--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -246,6 +246,10 @@ dataSources:
       eventHandlers:
         - event: XTokenCreated(uint256,address,address)
           handler: handleXTokenCreated
+        - event: Deposit(uint256,uint256,uint256,uint256,address)
+          handler: handleDeposit
+        - event: Withdraw(uint256,uint256,uint256,address)
+          handler: handleWithdraw
 templates:
   - kind: ethereum/contract
     name: NFTXLPStaking
